--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,18 @@
   </head>
 
   <body>
+    <div id="header">
+      <nav>
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo">LOGO</a>
+          <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="sass.html">Index</a></li>
+            <li><a href="badges.html">About</a></li>
+            <li><a href="collapsible.html">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
     <%= yield %>
   </body>
 </html>
