Add article and configure webpacker materialize

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
         </div>
       </nav>
     </div>
-    <%= yield %>
+    <div id="main">
+      <%= yield %>
+    </div>
   </body>
 </html>
