--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Articles</h1>
-
+<%= link_to new_article_path, class: "btn-floating btn-large waves-effect waves-light green" do %>
+  <i class="material-icons">add</i>
+<% end %>
+<br />
 <table>
   <thead>
     <tr>
@@ -25,5 +28,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Article', new_article_path %>
