--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
           <%= link_to "LOGO", root_path, class: "brand-logo" %>
           <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><%= link_to "Index", root_path %></li>
+            <li><%= link_to "Articles", articles_path %></li>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact", contact_path %></li>
           </ul>
