--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@ $primary-color: #346BA7 !default;
 $secondary-color: #346BA7 !default;
 @import 'materialize-css/sass/materialize';
 
+@import 'material-icons/iconfont/material-icons.css';
 
 #main {
   padding: 20px;
