--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import 'materialize-css/sass/components/_color-variables';
-$primary-color: #346BA7 !default;
+$primary-color: #b80000 !default;
 $secondary-color: #346BA7 !default;
 @import 'materialize-css/sass/materialize';
 
