--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,26 +8,19 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', 'custom', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <div id="header">
-      <nav>
-        <div class="nav-wrapper">
-          <%= link_to "LOGO", root_path, class: "brand-logo" %>
-          <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><%= link_to "Index", root_path %></li>
-            <li><%= link_to "Articles", articles_path %></li>
-            <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Contact", contact_path %></li>
-          </ul>
-        </div>
-      </nav>
+      <%= render 'layouts/navigation' %>
     </div>
     <div id="main">
       <%= yield %>
+    </div>
+    <div id="footer">
+     <%= render 'layouts/footer' %>
     </div>
   </body>
 </html>
