Add cards for articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="green-text green-darken-2"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
