--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,32 @@
-<p id="notice"><%= notice %></p>
+<p id="notice" class="green-text green-darken-2"><%= notice %></p>
 
-<h1>Articles</h1>
+<h1 class="center-align">List of Articles</h1>
+<div id="new-article" class="center-align">
 <%= link_to new_article_path, class: "btn-floating btn-large waves-effect waves-light green" do %>
   <i class="material-icons">add</i>
 <% end %>
+</div>
 <br />
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class="container">
+  <% @articles.each do |article| %>  
+    <div class="row">
+      <div class="col s12 m6 offset-m3">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title"><%= article.title %></span>
+            <p><%= article.description %></p>
+          </div>
+          <div class="card-action center-align grey lighten-4">
+            <%= link_to edit_article_path(article), class: "waves-effect waves-light btn" do %>
+              <i class="material-icons">edit</i>
+            <% end %>
+            <%= link_to article, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" do %>
+              <i class="material-icons">delete</i> 
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>              
+  <% end %>
+</div>
 <br>
