--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>New Article</h1>
+  <h1><%= Article.model_name.human %></h1>
 
   <%= render 'form', article: @article %>
 </div>
