adjust message error

--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,9 @@
 <% if errors.any? %>
-    <div id="error_explanation">
-      <h2><%= t 'message_error' %></h2>
-
+  <h5><%= t 'message_error' %></h5>
+    <div class="red-text text-darken-4">
       <ul>
         <% errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <li><%= "- #{error.full_message} "%></li>
         <% end %>
       </ul>
     </div>
