--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,8 +11,8 @@
 
   <div class="row">
     <div class="input-field col s6">
-      <%= form.label :description, class: "validate" %>
-      <%= form.text_field :description, class: "validate" %>
+      <%= form.label :description %>
+      <%= form.text_area :description, class: "materialize-textarea" %>
     </div>
   </div>
   <div class="row">
