--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,24 @@
-<p id="notice" class="green-text green-darken-2"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @article.description %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<%= render 'shared/message_success' %>
+<br>
+<div class="container">
+  <div class="row">
+    <br>
+    <div class="col s12 m10 offset-m1">
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title"><%= @article.title %></span>
+          <p><%= simple_format(@article.description) %></p>
+        </div>
+        <div class="card-action center-align grey lighten-4">
+          <%= link_to edit_article_path(@article), class: "waves-effect waves-light btn" do %>
+            <i class="material-icons">edit</i>
+          <% end %>
+          <%= link_to @article, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" do %>
+            <i class="material-icons">delete</i> 
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>              
+</div>
+<br>
