--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -15,6 +15,8 @@
           <div class="card-content">
             <span class="card-title"><%= article.title %></span>
             <p><%= article.description.truncate(10) %></p>
+            <br><br>
+            <i><%= article.user.try(:username) || "Anonymous" %> - <%= time_ago_in_words(article.updated_at) %></i>
           </div>
           <div class="card-action center-align grey lighten-4">
             <%= link_to article_path(article), class: "waves-effect waves-light btn" do %>
