--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,8 @@
         <div class="card-content">
           <span class="card-title"><%= @article.title %></span>
           <p><%= simple_format(@article.description) %></p>
+          <br><br>
+          <i><%= @article.user.try(:username) || "Anonymous" %> - <%= time_ago_in_words(@article.updated_at) %></i>
         </div>
         <div class="card-action center-align grey lighten-4">
           <%= link_to edit_article_path(@article), class: "waves-effect waves-light btn" do %>
