--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,7 @@
             <span class="card-title"><%= article.title %></span>
             <p><%= article.description.truncate(10) %></p>
             <br><br>
-            <i><%= article.user.try(:username) || "Anonymous" %> - <%= time_ago_in_words(article.updated_at) %></i>
+            <i>por <b><%= article.user.try(:username) || "Anonymous" %></b> em <%= time_ago_in_words(article.updated_at) %></i>
           </div>
           <div class="card-action center-align grey lighten-4">
             <%= link_to article_path(article), class: "waves-effect waves-light btn" do %>
