Add create users

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,4 +16,10 @@ div#new-article {
   margin-left:300px;
 }
 
+.container-center { 
+  width: 400px; 
+  margin-left: auto;
+  margin-right: auto; 
+}
+
     
