--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,7 @@
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", contact_path %></li>
         <li> 
-          <%= link_to "#", class: "btn waves-effect waves-light green" do %>
+          <%= link_to signup_path, class: "btn waves-effect waves-light green" do %>
             SIGN UP <i class="material-icons right">send</i>         
           <% end %>
         </li>
