Add edit password users

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -30,7 +30,8 @@
 
   <div class="row">
     <div class="input-field col s12 center">
-      <%= form.submit "Enviar", class: "waves-effect waves-light btn green" %>
+      <%#= form.submit "#{button_name}", class: "waves-effect waves-light btn green" %>
+      <button type="submit" class="waves-effect waves-light btn green"><%= button_name %></button>
     </div>
   </div>      
   
