--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,11 +1,11 @@
 <%= render 'shared/message_success' %>
-<h1 class="center-align">List of Articles</h1>
-<div id="new-article">
-<br>
+<h1 class="center-align">List of Articles
+
 <%= link_to new_article_path, class: "btn-floating btn-large waves-effect waves-light green" do %>
   <i class="material-icons">add</i>
 <% end %>
-</div>
+</h1>
+
 <br />
 <%= render 'article' %>
 <center>
