--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,12 @@
 <div class="container">
-  <h4 class="center-align">Signup Users</h4>
-  <div class="container-center">
-    <%= render 'form', user: @user %>
+  <div class="row">
+    <div class="col s12 m6 offset-m3 ">
+      <div class="card-panel">
+        <h4 class="center-align">Signup Users</h4>
+        <div class="container-center">
+          <%= render 'form', user: @user %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
