Modify login button

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
         <li><%= link_to "Contact", contact_path %></li>
         <li>
           <%= link_to login_path, class: "btn waves-effect waves-light green lighten-1" do %>
-            LOGIN <i class="material-icons">send</i>
+            SIGN IN <i class="material-icons">send</i>
           <% end %>
         </li>
         <li> 
