--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col s12 m6 offset-m3 ">
+    <div class="col s12 m7 offset-m3 ">
       <div class="card-panel">
-        <h4 class="center-align">Signup Users</h4>
+        <h4 class="center-align">Signup User</h4>
         <div class="container-center">
           <%= render 'form', user: @user %>
         </div>
