Restrict access to users

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -12,11 +12,13 @@
           <i>por <b><%= user_page(@article) %></b> em <%= time_ago_in_words(@article.updated_at) %></i>
         </div>
         <div class="card-action center-align grey lighten-4">
-          <%= link_to edit_article_path(@article), class: "waves-effect waves-light btn" do %>
-            <i class="material-icons">edit</i>
-          <% end %>
-          <%= link_to @article, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" do %>
-            <i class="material-icons">delete</i> 
+          <% if loggined_in? && @article.user == current_user %>
+            <%= link_to edit_article_path(@article), class: "waves-effect waves-light btn" do %>
+              <i class="material-icons">edit</i>
+            <% end %>
+            <%= link_to @article, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" do %>
+              <i class="material-icons">delete</i> 
+            <% end %>
           <% end %>
         </div>
       </div>
