--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
         <% unless loggined_in? %>
           <li>
             <%= link_to login_path, class: "btn-small waves-effect waves-light green darken-1" do %>
-              SIGN IN <i class="material-icons">send</i>
+              SIGN IN <i class="material-icons right">account_circle</i>
             <% end %>
           </li>
           <li> 
