Create resource protection for logged in user and same user

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/message_success' %>
+<%#= render 'shared/message_center' %>
 <h1 class="center-align">List of Articles
 <% if loggined_in? %>
   <%= link_to new_article_path, class: "btn-floating btn-large waves-effect waves-light green" do %>
