--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <%= render 'layouts/navigation' %>
     </div>
     <div id="main">
+      <%= render 'shared/message_center'%>
       <%= yield %>
     </div>
     <div id="footer">
