--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: user) do |form| %>
-  <%= render 'shared/message_success' %>
+  <%#= render 'shared/message_center' %>
   <%= render 'shared/errors', errors: user.errors %>
 
   <div class="row">
