--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/message_success' %>
+<%#= render 'shared/message_center' %>
 <h1 class="center-align">List of Bloggers</h1>
 <br>
 <div class="container">
