--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/message_success' %>
+<%#= render 'shared/message_center' %>
 <div class="container">
   <div class="center-align">
     <p>
