--- a/app/views/page/home.html.erb
+++ b/app/views/page/home.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/message_success' %>
+<%#= render 'shared/message_center' %>
 <div class="container">
   <div class="row">
     <div class="col s12">
