--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,15 +2,18 @@
 <div class="container">
   <div class="center-align">
     <p>
-      <%= avatar_image(@user) %>
-      <h5>
-        <%= @user.username.capitalize %>'s profile
+      <%= avatar_image(@user) %><br>
+      <h5><%= @user.username.capitalize %>'s profile</h5>
+      <span>
         <% if loggined_in? && @user == current_user %>
-          <%= link_to edit_user_path(@user) do %>
-            <i class="tiny material-icons">edit</i>
+          <%= link_to edit_user_path(@user), class: "waves-effect waves-light btn-small" do %>
+            <i class="material-icons">edit</i>
+          <% end %>
+          <%= link_to user_path(@user), class: "waves-effect waves-light btn-small red", method: :delete, data: { confirm: "Are you sure?" } do %>
+            <i class="tiny material-icons">delete</i>
           <% end %>
         <% end %>
-      </h5>
+      </span>
     </p> 
     <h3>Articles</h3>
     <%= render 'articles/article' %>
