--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,7 +14,7 @@
           <%= link_to article_path(article), class: "waves-effect waves-light btn" do %>
             <i class="material-icons">pageview</i>
           <% end %>
-          <% if loggined_in? && article.user == current_user %>
+          <% if loggined_in? && (article.user == current_user || current_user.admin?) %>
             <%= link_to edit_article_path(article), class: "waves-effect waves-light btn" do %>
               <i class="material-icons">edit</i>
             <% end %>
