--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,9 +18,14 @@
             <%= link_to user_path(user), class: "waves-effect waves-light btn" do %>
               <i class="material-icons">pageview</i>
             <% end %>
-            <% if loggined_in? && user == current_user %>
+            <% if loggined_in? && (user == current_user || current_user.admin?) %>
               <%= link_to edit_user_path(user), class: "waves-effect waves-light btn" do %>
                 <i class="material-icons">edit</i>
+              <% end %>
+              <% if current_user.admin? %>
+                <%= link_to user_path(user), method: :delete,  data: { confirm: "Are you sure?" }, class: "waves-effect waves-light btn red" do %>
+                  <i class="material-icons">delete</i>
+                <% end %>
               <% end %>
             <% end %>
           </div>
