--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -4,8 +4,8 @@
 
   <div class="row">
     <div class="input-field col s6">
-      <%= form.label :name, 'Category name', class: "validate" %>
-      <%= form.text_field :name, class: "validate" %>
+      <%= form.label :name, class: "validate" %>
+      <%= form.text_field :name, class: "validate", id:"name" %>
     </div>
   </div>
   <div class="row">
