--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,6 +6,7 @@
       <div class="card">
         <div class="card-content">
           <span class="card-title"><%= @category.name %></span>
+          <%= image_tag "/uploads/ruby-logo.png" %>
         </div>
         <div class="card-action center-align grey lighten-4">
           <% if loggined_in? && (@category.user == current_user || current_user.admin?) %>
