--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,1 +1,34 @@
-<p>AAA</p>
+<%#= render 'shared/message_center' %>
+<h1 class="center-align">List of Categories</h1>
+<br>
+<div class="container">
+  <% @categories.each do |category| %>  
+    <div class="row">
+      <div class="col s12 m6 offset-m3">
+        <div class="card">
+          <div class="card-content center">
+            <span class="card-title">
+              <%= link_to "#{category.name}", category %>
+            </span>
+            <p><i>Joined: <%= time_ago_in_words(category.updated_at) %></i></p>
+          </div>
+          <div class="card-action center-align grey lighten-4">
+            <%= link_to category_path(category), class: "waves-effect waves-light btn" do %>
+              <i class="material-icons">pageview</i>
+            <% end %>
+            <%= link_to edit_category_path(category), class: "waves-effect waves-light btn" do %>
+              <i class="material-icons">edit</i>
+            <% end %>
+            <%= link_to category_path(category), method: :delete,  data: { confirm: "Are you sure?" }, class: "waves-effect waves-light btn red" do %>
+              <i class="material-icons">delete</i>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>              
+  <% end %>
+</div>
+<center>
+  <%= paginate @categories %>
+</center>
+<br>
