--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,6 +5,7 @@
       <ul class="right hide-on-med-and-down">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Articles", articles_path %></li>
+        <li><%= link_to "Categories", categories_path %></li>
         <li><%= link_to "Bloggers", users_path %></li>
         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact", contact_path %></li>
