--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -15,6 +15,14 @@
       <%= form.text_area :description, class: "materialize-textarea" %>
     </div>
   </div>
+
+  <p>Categories:</p>
+  <% @categories.each do |a_value| %>
+    <label> 
+      <%= form.check_box(:category_ids, { :multiple => true }, a_value.id, nil) %>
+      <span><%= a_value.name %></span><br>
+    </label>
+  <% end %>
   <div class="row">
     <div class="input-field col s6">
     <%#= form.submit %>
