--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,7 +5,8 @@
     <div class="col s12 m10 offset-m1">
       <div class="card">
         <div class="card-content">
-          <span class="card-title"><%= @category.name %></span>
+          <span class="card-title">Category: <%= @category.name %></span>
+          <hr>
           <%= image_tag "/uploads/ruby-logo.png" %>
         </div>
         <div class="card-action center-align grey lighten-4">
@@ -13,13 +14,16 @@
             <%= link_to edit_category_path(@category), class: "waves-effect waves-light btn" do %>
               <i class="material-icons">edit</i>
             <% end %>
-            <%= link_to @category, method: :delete, data: { confirm: 'Are you sure?' }, class: "waves-effect waves-light btn red" do %>
-              <i class="material-icons">delete</i> 
-            <% end %>
           <% end %>
         </div>
       </div>
     </div>
-  </div>              
+  </div>
+  <hr>
+  <center>
+    <h3>Articles</h3>
+  </center>
+  <hr>
+  <%= render 'articles/article' %>              
 </div>
 <br>
